<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.nikl</groupId>
    <artifactId>gamebox</artifactId>
    <name>GameBox</name>
    <packaging>jar</packaging>
    <version>3.0.0-beta.3</version>
    <description>Collection of inventory games</description>
    <url>https://gamebox.nikl.me</url>

    <distributionManagement>
        <repository>
            <id>nikl-repo</id>
            <url>http://repo.nikl.me/artifactory/public</url>
        </repository>
    </distributionManagement>

    <scm>
        <url>https://github.com/NiklasEi/gamebox</url>
        <connection>git@github.com:NiklasEi/gamebox.git</connection>
    </scm>

    <developers>
        <developer>
            <id>Nikl</id>
            <name>Niklas Eicker</name>
            <email>hello@nikl.me</email>
            <url>https://www.nikl.me</url>
        </developer>
    </developers>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <sourceDirectory>src/main/java</sourceDirectory>
        <directory>target</directory>
        <finalName>${project.name}</finalName>
        <resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.yml</include>
                    <include>dst-root-ca-x3.pem</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <artifactSet>
                        <includes>
                            <include>org.bstats:*</include>
                            <include>me.nikl.nmsutilities:*</include>
                            <include>com.zaxxer:*</include>
                            <include>org.slf4j:*</include>
                            <include>co.aikar:*</include>
                            <include>net.jodah:expiringmap</include>
                        </includes>
                    </artifactSet>
                    <relocations>
                        <relocation>
                            <pattern>me.nikl.nmsutilities</pattern>
                            <shadedPattern>me.nikl.gamebox.nms</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>me.nikl.gamebox.common.bstats</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.zaxxer</pattern>
                            <shadedPattern>me.nikl.gamebox.common.zaxxer</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.slf4j</pattern>
                            <shadedPattern>me.nikl.gamebox.common.slf4j</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>co.aikar.timings.lib</pattern>
                            <shadedPattern>me.nikl.gamebox.common.timings</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>co.aikar.commands</pattern>
                            <shadedPattern>me.nikl.gamebox.common.acf</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>co.aikar.locales</pattern>
                            <shadedPattern>me.nikl.gamebox.common.locales</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>co.aikar.util</pattern>
                            <shadedPattern>me.nikl.gamebox.common.util</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>net.jodah.expiringmap</pattern>
                            <shadedPattern>me.nikl.gamebox.common.expiringmap</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M4</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <compilerArgument>-Xlint:all</compilerArgument>
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>bukkit-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>CodeMC</id>
            <url>https://repo.codemc.org/repository/maven-public</url>
        </repository>
        <repository>
            <id>vault-repo</id>
            <url>http://nexus.hc.to/content/repositories/pub_releases</url>
        </repository>
        <repository>
            <id>hikari-repo</id>
            <url>https://mvnrepository.com/artifact/com.zaxxer/HikariCP</url>
        </repository>
        <repository>
            <id>nikl-repo</id>
            <url>https://repo.nikl.me/artifactory/public</url>
        </repository>
        <repository>
            <id>aikar</id>
            <url>https://repo.aikar.co/nexus/content/groups/aikar/</url>
        </repository>
    </repositories>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <junit-jupiter.version>5.6.0</junit-jupiter.version>
        <timestamp>${maven.build.timestamp}</timestamp>
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss:SSS Z</maven.build.timestamp.format>
    </properties>

    <dependencies>
        <!--Bukkit API-->
        <dependency>
            <groupId>org.bukkit</groupId>
            <artifactId>bukkit</artifactId>
            <version>1.14.2-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- placeholderAPI -->
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.10.3</version>
        </dependency>
        <!-- bStats -->
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>1.5</version>
            <scope>compile</scope>
        </dependency>
        <!-- vault -->
        <dependency>
            <groupId>net.milkbowl.vault</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.6</version>
        </dependency>
        <!-- HikariCP -->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>3.3.1</version>
            <scope>compile</scope>
        </dependency>
        <!-- SLF4J -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-nop</artifactId>
            <version>1.7.5</version>
            <scope>compile</scope>
        </dependency>
        <!-- CalendarEvents -->
        <dependency>
            <groupId>me.nikl</groupId>
            <artifactId>calendarevents</artifactId>
            <version>2.0.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- ACF -->
        <dependency>
            <groupId>co.aikar</groupId>
            <artifactId>acf-bukkit</artifactId>
            <version>0.5.0-SNAPSHOT</version>
        </dependency>
        <!-- nms modules -->
        <dependency>
            <groupId>me.nikl.nmsutilities</groupId>
            <artifactId>nmsutilities</artifactId>
            <version>1.3.2</version>
        </dependency>
        <!-- other stuff -->
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>3.0.2</version>
        </dependency>
        <!-- Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
